# research_v2

./: .gitignore  README.md  go.work
ai/: pyproject.toml
ai/ai_notes/verbatim_question_grouping/: prompts.txt  question-group-implementation-summary.md  verbatim-question-groups-implementation.md  verbatim-question-groups-schema.md  verbatim-question-groups-summary.md
ai/basic-mcp-chatbot-arxiv/: mcp_server.py  readme.md
ai/build-an-agent-from-scratch/: 1_simple-react-agent.py  2_langgraph_agent.py  3a_manual_search.py  3b_tavily_search.py  4_persistence_and_streaming.py  5_human_in_the_loop.py  6_essay_writter.py  6_essay_writter_gui.py  README.md
ai/email-assistant/: assistant.py
ai/ollama-course/: categorize_grocery.py  ollama_rag.py  requirements.txt
ai/ollama-course/rag/: basic.py  rag_ollama.py
golang/belajar-golang-dasar/: array.go  defer.go  errors.go  function.go  import.go  interface.go  map.go  named_return_value.go  slice.go  slice_2.go  struct.go  type_declaration.go  variable.go
grpc/basic-grpc-node/: client.js  generate-cert-v2.sh  package-lock.json  server.js  todo.proto
grpc/event-app-node-grpc/: package.json
kafka/test-kafka-node/: consumer.js  docker-compose.yaml  package-lock.json  producer.js  topic.js
nestjs/test-dynamic-module/: package-lock.json  package.json
nestjs/test-nest-grpc/: package-lock.json  package.json
nodejs/design-patterns/: command.js  factory.js  flyweight.js  mediator-middleware.js
nodejs/fcm-webapp/: config.ts  firebase-messaging-sw.js  firebase.json  index.html  main.ts  package-lock.json  package.json  tsconfig.json  vite.config.js
nodejs/nodejs-modules/: crypto-encrypt.js
nodejs/populix-tools/: answer-popcheck.js  compare-mandatory.js
notes/: mcp.md
python/adu-banding-teks/: .gitignore  README.md  adu_der.py  adu_utils.py  adu_wer.py  deepgram_transcript.py  der_elevenlabs_deepgram.py  hasil_der.txt  hasil_wer.txt  main.py  notes-manual-transcript.txt  output_transcript.txt  pyproject.toml  reports_elevenlabs.txt  research_elevenlabs.ipynb  result-3.txt  result-wer.txt  wer_elevenlabs_deepgram.py
python/adu-banding-teks/deepgram/: deepgram-1-diarization.txt  deepgram-1-normal.txt  deepgram-1-raw.json  deepgram-2-diarization.txt  deepgram-2-normal.txt  deepgram-2-raw.json  deepgram-3-diarization.txt  deepgram-3-normal.txt  deepgram-3-raw.json  idi-2-diarization.txt  idi-5-diarization.txt  utils.py
python/adu-banding-teks/deepgram-transcript/: deepgram-transcript-1-normal.txt  deepgram-transcript-2-normal.txt  deepgram-transcript-3-normal.txt
python/adu-banding-teks/elevenlabs/: idi-2-diarization.txt  idi-5-diarization.txt
python/adu-banding-teks/idi4/: manual.txt  original.txt
python/adu-banding-teks/manual/: manual-1-diarization.txt  manual-1-normal.txt  manual-2-diarization.txt  manual-2-normal.txt  manual-3-diarization.txt  manual-3-normal.txt
python/adu-banding-teks/manual-patronus/: dakar-fgd-2.txt  idi-2-diarization.txt  idi-2.txt  idi-5-diarization.txt  idi-5.txt
python/adu-banding-teks/patronus-no-punctuation/: deepgram-dakar-fgd-2.txt  deepgram-idi-2.txt  deepgram-idi-5.txt  elevenlabs-dakar-fgd-2.txt  elevenlabs-idi-2.txt  elevenlabs-idi-5.txt
python/adu-banding-teks/references/: sample_data_sample-audio-1.docx  sample_data_sample-audio-1_naked.docx  sample_data_sample-audio-1_naked.txt  sample_data_sample-audio-2.docx  sample_data_sample-audio-2_naked.docx  sample_data_sample-audio-2_naked.txt  sample_data_sample-audio-3.docx  sample_data_sample-audio-3_naked.docx  sample_data_sample-audio-3_naked.txt
python/adu-banding-teks/speechmatics/: g0lhin69bl.transcript.txt  speechmatics-1-normalization.txt  speechmatics-1-raw.json  speechmatics-2-normalization.txt  speechmatics-3-normalization.txt  speechmatics-diarization-1.txt  speechmatics-diarization-2.txt  speechmatics-diarization-3.txt
python/book-recommender/: learn-data-cleaning.ipynb  pyproject.toml  sentiment-analysis.ipynb  test-torch.ipynb  text-classification.ipynb  vector-search.ipynb
python/gen-ai-full-course/: pyproject.toml  test_openai_api.ipynb
python/offline-qc/: chairul.ipynb  similiar_phone.ipynb  test_offline_template_clean.xlsx
python/python-workshop-2nd/: 10_correlation.ipynb  10_histogram.ipynb  9_pypy.ipynb  (+14 more)
python/riset-eka/: func_import_inside.py  import_module_memory.ipynb  main.py  mutasi_variable.py  pandas_multiprocessing.py  pyproject.toml  read_pdf_pdfplumber.py  read_transcript_document.py  test_multiprocess_memory.py  transcript.docx  transcript_doc.py  transcript_doc2.py  with_pandas.py  with_polars.py  without_pandas.py
python/riset-eka/transcriber-improvement/: reducing_noise.py
python/test-repo/: .env-sample  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
python/test-repo/.github/: PULL_REQUEST_TEMPLATE.md
python/test-repo/src/core/: config.py  dependencies.py  exceptions.py  middleware.py
python/test-repo/src/helpers/: agent.py  aws.py  const.py  db.py  log.py  response.py  utils.py
python/test-repo/src/modules/information/: __init__.py  schemas.py  views.py
(+70 files in other folders)
