[project]
name = "adu-banding-teks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "deepgram-sdk>=4.5.0",
    "google-cloud-speech>=2.33.0",
    "google-cloud-storage>=3.2.0",
    "jiwer>=4.0.0",
    "pyannote-core>=5.0.0",
    "pyannote-metrics>=3.2.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "speechmatics-python>=4.0.9",
    "whisper-normalizer>=0.1.12",
]
