[tool.poetry]
name = "book-recommender"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.10"
kagglehub = "^0.3.10"
matplotlib = "^3.10.1"
pandas = "^2.2.3"
seaborn = "^0.13.2"
python-dotenv = "^1.1.0"
langchain-community = "^0.3.20"
langchain-opencv = "^0.1.1"
langchain-chroma = "^0.2.2"
transformers = "^4.50.3"
gradio = "^5.23.1"
ipywidgets = "^8.1.5"
langchain-core = "^0.3.49"
langchain-openai = "^0.3.11"
langchain-text-splitters = "^0.3.7"
tqdm = "^4.67.1"
notebook = "^7.3.3"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
