[tool.poetry]
name = "gen-ai-full-course"
version = "0.1.0"
description = "Learning generative AI"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.11.10"
numpy = "2.2.3"
pandas = "2.2.3"
openai = "1.65.5"
python-dotenv = "1.0.1"
groq = "^0.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
