[tool.poetry]
name = "riset-eka"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.10"
wireup = "^1.0.2"
pandas = "^2.2.3"
numpy = "^2.2.5"
memory-profiler = "^0.61.0"
polars = "^1.29.0"
python-docx = "^1.1.2"
pypdf2 = "^3.0.1"
pdfplumber = "^0.11.6"
pymupdf = "^1.25.5"
pypdf = "^5.5.0"
noisereduce = "^3.0.3"
soundfile = "^0.13.1"
deepgram-sdk = "^4.5.0"
pydub = "^0.25.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
