[project]
name = "riset-eka"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "memory-profiler>=0.61.0",
    "noisereduce>=3.0.3",
    "pandas==2.2.3",
    "pdfplumber==0.11.6",
    "polars==1.17.1",
    "pydub>=0.25.1",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "soundfile>=0.13.1",
]
